--- a/index.html
+++ b/index.html
@@ -41,26 +41,29 @@
             </li>
           </ul>
         </nav>
-        <h1 class="header__title">
-          <span class="header__title_span-accent">Café de especialidad</span> en
-          Triple Peaks
-        </h1>
-        <p class="header__description">
-          ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
-          para darte energía y una vibra acogedora que motivarán tu creatividad.
-        </p>
+        <div class="header__content">
+          <h1 class="header__title">
+            <span class="header__span-accent">Café de especialidad</span>
+            en Triple Peaks
+          </h1>
+          <p class="header__description">
+            ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
+            para darte energía y una vibra acogedora que motivarán tu
+            creatividad.
+          </p>
+        </div>
         <img
           src="./images/inside_coffee_shop.png"
           alt="Ilustration 'inside the coffee-shop'"
           class="header__image"
         />
         <div class="header__footer">
-          <p class="header__schedule">
+          <p class="header__paragraph">
             Horario: <br />
             Lunes a Viernes (de 10:00 a 19:00) <br />
             Sábados y Domingos (de 11:00 a 18:00)
           </p>
-          <p class="header__address">
+          <p class="header__paragraph">
             Avenida del Éxito 200, Ciudad Triple Peaks
           </p>
         </div>
